Last commit of 2023
Took 3 hours 14 minutes

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,3 +6,6 @@ commands:
   statuer:
     description: Reloads the plugin configuration
     usage: /statuer
+  Portunbind:
+    description: Unbinds the ws PORT
+    usage: /Portunbind
